syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "common.proto";
import "status.proto";

option csharp_namespace = "Nextodon.Grpc";

service Timeline {
  rpc GetPublic (GetPublicTimelineRequest) returns (Statuses)
  {
	option (google.api.http) = {
      get: "/api/v1/timelines/public"
      response_body: "data"
    };
  }
    
  rpc GetByTag (google.protobuf.StringValue) returns (Statuses)
  {
	option (google.api.http) = {
      get: "/api/v1/timelines/tag/{value}"
      response_body: "data"
    };
  }

  rpc GetHome (DefaultPaginationParameters) returns (Statuses)
  {
	option (google.api.http) = {
      get: "/api/v1/timelines/home"
      response_body: "data"
    };
  }
    
  rpc GetList (google.protobuf.StringValue) returns (Statuses)
  {
	option (google.api.http) = {
      get: "/api/v1/timelines/list/{value}"
      response_body: "data"
    };
  }

  rpc GetDirect (DefaultPaginationParameters) returns (Statuses)
  {
    option deprecated = true;
	option (google.api.http) = {
      get: "/api/v1/timelines/direct"
      response_body: "data"
    };
  }
}

message GetPublicTimelineRequest 
{
    // Show only local statuses? Defaults to false.
    bool local = 1;

    // Show only remote statuses? Defaults to false.
    bool remote = 2;

    // Show only statuses with media attached? Defaults to false.
    bool only_media = 3;

    // Return results older than this ID.
    optional string max_id = 4;
    
    // Return results newer than this ID.
    optional string since_id = 5;

    // Return results immediately newer than this ID.
    optional string min_id = 6;
    
    // Maximum number of results to return. Defaults to 40 accounts. Max 80 accounts.
    optional uint32 limit = 7;
}
